Added warmup redis db functions; Imported godotenv; Added docker-compose and Dockerfile for migration

--- a/.env
+++ b/.env
@@ -1,6 +1,25 @@
-POSTGRES_USER=gorm
-POSTGRES_PASSWORD=gorm
-POSTGRES_DB=gopherBuy
+# POSTGRES_USER=gorm
+# POSTGRES_PASSWORD=gorm
 
-KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
-KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+# Database
+POSTGRES_HOST=postgres-db
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=gopherbuy
+
+# Redis
+REDIS_HOST=redis-cache
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
+
+# Kafka
+KAFKA_BROKERS=kafka:9092
+KAFKA_TOPIC=order_create
+
+# Asynq
+ASYNQ_REDIS_HOST=redis-cache
+ASYNQ_REDIS_PORT=6379
+ASYNQ_REDIS_PASSWORD=
+ASYNQ_REDIS_DB=2
